# BallTracker

./: Ball.m  Log.md  README.md  bad2.mat  ballDetector.m  deleteEdgeMatchedPoints.m  getAxis.m  getDetectArea.m  getNumOfCombination.m  getRotationInfo.m  getRotationInfoCross.m  getSpaceCoordinate.m  matlab.mat  prototype.m  rotationDetector.m
Attempt/OpenCV/: FramePoint.cpp  temp.cpp
Attempt/OpenCV/SourceCode/: hough.cpp
Demo/: ballDetector.m  demo.m  getRotateInfo.m  getSpaceCoordinate.m  interface.md  prototype.asv  prototype.m  rotationDetector.m  triDRotate.m
OpenCV/: frame_change.txt  main.cpp  temp.cpp  temp.h
Procedure/: getRotateInfo.m
RotationUtil/: extractFeatureMat.m  findFittingValue.m  getRotateInfoDistrubution.m
ThreadTest/: CMakeLists.txt  main.cpp
Verision1/: main.cpp
Verision1/OpenCV/: CMakeLists.txt  FramePoint.h  GPU_Local_GTX850m_Radius(100-200).odc  frame_change (copy).txt  frame_change.txt  main.cpp
Verision2/VS_Project/tracker/: tracker.sln
Verision2/VS_Project/tracker/tracker/: tracker.vcxproj
